Fix [styles]: the cover-container for the image of the index overflowed on mobile devide. Now the image adjustes to the width of the device

--- a/styles.css
+++ b/styles.css
@@ -354,6 +354,13 @@ header{
     min-height: 80vh;
 }
 
+.cover-container img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
 /* Basic structure of every section*/
 .content-section{
     padding: 60px 10%;
